fix fdo#52998 xls(x) comment export problems

Change-Id: Ie290199d3b03f6599429d56275eb54661af4a51c